asatsuyu/crates/asatsuyu-backend-python/src/snapshots/asatsuyu_backend_python__tests__snap_checked_ffi_codegen.snap
---
source: crates/asatsuyu-backend-python/src/lib.rs
expression: py
---
# Generated by Asatsuyu — do not edit
import json
from .asatsuyu_prelude import PyException, AsatsuyuError
from . import _asatsuyu_runtime
if not _asatsuyu_runtime.ffi_available():
    raise AsatsuyuError("_asatsuyu_runtime is not available for Checked FFI")
_checked_runtime_json = _asatsuyu_runtime.import_module("json")
if not hasattr(_checked_runtime_json, 'loads'):
    raise AsatsuyuError("json.loads: symbol not available at runtime (stub/runtime mismatch)")
if not hasattr(_checked_runtime_json, 'dumps'):
    raise AsatsuyuError("json.dumps: symbol not available at runtime (stub/runtime mismatch)")


def f(data: str) -> int:
    try:
        _checked_0 = _asatsuyu_runtime.call_function(_checked_runtime_json, "loads", data)
    except Exception as _e:
        _asatsuyu_exc = _asatsuyu_runtime.normalize_exception(_e)
        raise AsatsuyuError(f"{_asatsuyu_exc['exception_type']}: {_asatsuyu_exc['message']}")
    if not isinstance(_checked_0, (dict, list, str, int, float, bool, type(None))):
        raise AsatsuyuError(f"json.loads returned unexpected type: {type(_checked_0).__name__}")
    result = _checked_0
    return 42
