asatsuyu/crates/asatsuyu-backend-python/src/snapshots/asatsuyu_backend_python__tests__snap_mutable_locals_codegen.snap
---
source: crates/asatsuyu-backend-python/src/lib.rs
expression: py
---
# Generated by Asatsuyu — do not edit
from __future__ import annotations


def accumulate() -> int:
    sum = 0
    sum = (sum + 10)
    sum = (sum + 20)
    return sum
