asatsuyu/crates/asatsuyu-backend-python/src/snapshots/asatsuyu_backend_python__tests__snap_prelude_content.snap
---
source: crates/asatsuyu-backend-python/src/lib.rs
expression: "crate::prelude::PRELUDE_PY"
---
# asatsuyu_prelude.py — Generated by Asatsuyu, do not edit
from dataclasses import dataclass
import traceback as _tb


@dataclass(frozen=True, slots=True)
class Ok[T]:
    value: T


@dataclass(frozen=True, slots=True)
class Error[E]:
    error: E


type Result[T, E] = Ok[T] | Error[E]


@dataclass(frozen=True, slots=True)
class PyException:
    """Categorized Python exception captured at the FFI boundary.

    Fields:
        kind: Exception category — one of "IoError", "ValueError",
              "TypeError", "KeyError", "AttributeError", "ImportError",
              "ArithmeticError", "RuntimeError", or "Other".
        exception_type: Exact Python exception class name (e.g. "FileNotFoundError").
        message: Human-readable error message (str(e)).
        module: Python module where the exception class is defined.
        traceback_summary: Formatted traceback string.
    """
    kind: str
    exception_type: str
    message: str
    module: str
    traceback_summary: str

    @classmethod
    def from_exception(cls, e: Exception) -> "PyException":
        return cls(
            kind=_classify(e),
            exception_type=type(e).__name__,
            message=str(e),
            module=type(e).__module__,
            traceback_summary="".join(_tb.format_exception(e)),
        )


def _classify(e: Exception) -> str:
    """Categorize a Python exception into a known kind string."""
    if isinstance(e, OSError):
        return "IoError"
    if isinstance(e, ValueError):
        return "ValueError"
    if isinstance(e, TypeError):
        return "TypeError"
    if isinstance(e, KeyError):
        return "KeyError"
    if isinstance(e, AttributeError):
        return "AttributeError"
    if isinstance(e, ImportError):
        return "ImportError"
    if isinstance(e, ArithmeticError):
        return "ArithmeticError"
    if isinstance(e, RuntimeError):
        return "RuntimeError"
    return "Other"
