asatsuyu/crates/asatsuyu-backend-python/src/snapshots/asatsuyu_backend_python__tests__snap_requests_get_codegen.snap
---
source: crates/asatsuyu-backend-python/src/lib.rs
expression: py
---
# Generated by Asatsuyu — do not edit
import requests
from .asatsuyu_prelude import PyException, AsatsuyuError
from . import _asatsuyu_runtime
if not _asatsuyu_runtime.ffi_available():
    raise AsatsuyuError("_asatsuyu_runtime is not available for Checked FFI")
_checked_runtime_requests = _asatsuyu_runtime.import_module("requests")
if not hasattr(_checked_runtime_requests, 'get'):
    raise AsatsuyuError("requests.get: symbol not available at runtime (stub/runtime mismatch)")
if not hasattr(_checked_runtime_requests, 'post'):
    raise AsatsuyuError("requests.post: symbol not available at runtime (stub/runtime mismatch)")
if not hasattr(_checked_runtime_requests, 'put'):
    raise AsatsuyuError("requests.put: symbol not available at runtime (stub/runtime mismatch)")
if not hasattr(_checked_runtime_requests, 'delete'):
    raise AsatsuyuError("requests.delete: symbol not available at runtime (stub/runtime mismatch)")
if not hasattr(_checked_runtime_requests, 'Response'):
    raise AsatsuyuError("requests.Response: symbol not available at runtime (stub/runtime mismatch)")


def download(url: str) -> str:
    try:
        _checked_0 = _asatsuyu_runtime.call_function(_checked_runtime_requests, "get", url)
    except Exception as _e:
        return Error(PyException(**_asatsuyu_runtime.normalize_exception(_e)))
    response = _checked_0
    return response.text
