asatsuyu/crates/asatsuyu-backend-python/src/snapshots/asatsuyu_backend_python__tests__snap_try_let_codegen.snap
---
source: crates/asatsuyu-backend-python/src/lib.rs
expression: py
---
# Generated by Asatsuyu — do not edit
from __future__ import annotations
import pathlib
from dataclasses import dataclass
from .asatsuyu_prelude import PyException, AsatsuyuError
from . import _asatsuyu_runtime
if not _asatsuyu_runtime.ffi_available():
    raise AsatsuyuError("_asatsuyu_runtime is not available for Checked FFI")
_checked_runtime_pathlib = _asatsuyu_runtime.import_module("pathlib")
if not hasattr(_checked_runtime_pathlib, 'PurePath'):
    raise AsatsuyuError("pathlib.PurePath: symbol not available at runtime (stub/runtime mismatch)")
if not hasattr(_checked_runtime_pathlib, 'Path'):
    raise AsatsuyuError("pathlib.Path: symbol not available at runtime (stub/runtime mismatch)")


@dataclass(frozen=True, slots=True)
class Ok[T]:
    _0: T


@dataclass(frozen=True, slots=True)
class Error[U]:
    _0: U


type Result[T, U] = Ok[T] | Error[U]


@dataclass(frozen=True, slots=True)
class PyExc:
    _0: str
    _1: str
    _2: str
    _3: str
    _4: str


def f() -> Result[bool, PyException]:
    try:
        _checked_0 = _asatsuyu_runtime.call_function(_checked_runtime_pathlib, "Path", ".")
    except Exception as _e:
        return Error(PyException(**_asatsuyu_runtime.normalize_exception(_e)))
    p = _checked_0
    try:
        r = p.exists()
    except Exception as _e:
        return Error(PyException.from_exception(_e))
    return Ok(r)
