asatsuyu/crates/asatsuyu-backend-python/src/snapshots/asatsuyu_backend_python__tests__snap_try_return_codegen.snap
---
source: crates/asatsuyu-backend-python/src/lib.rs
expression: py
---
# Generated by Asatsuyu — do not edit
from __future__ import annotations
import pathlib
from dataclasses import dataclass
from .asatsuyu_prelude import PyException


@dataclass(frozen=True, slots=True)
class Ok[T]:
    _0: T


@dataclass(frozen=True, slots=True)
class Error[U]:
    _0: U


type Result[T, U] = Ok[T] | Error[U]


@dataclass(frozen=True, slots=True)
class PyExc:
    _0: str
    _1: str
    _2: str
    _3: str
    _4: str


def f() -> Result[bool, PyException]:
    p = pathlib.Path(".")
    try:
        _try_0 = p.exists()
    except Exception as _e:
        return Error(PyException.from_exception(_e))
    return Ok(_try_0)
